# pytest-subproc

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pytest_subproc/: __init__.py  _subproc_runner.py
tests/: conftest.py  test_subproc.py
